# solidity-parser-pip

./: .gitignore  .gitmodules  pyproject.toml  setup.py
scripts/: antlr4.sh
solidity_parser/: __main__.py  parser.py
solidity_parser/solidity_antlr4/: SolidityLexer.py  SolidityListener.py  SolidityParser.py  SolidityVisitor.py
src/solidity_antlr4/: SolidityLexer.py  SolidityListener.py  SolidityParser.py  SolidityVisitor.py
