[tool.poetry]
name = "solidity-python-pip"
version = "0.1.0"
description = "solidity parser for python3.6+"
authors = ["sam bacha <sam@manifoldfinance.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
